# samplesys

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxygen.config  LICENSE  README.md  test.cpp
.github/workflows/: check_pull_request.yml
example/: testAnalysis.cpp  testGraphStream.cpp  testSampler.cpp  utils.cpp  utils.h
example/input/: blogcatalog_edge.txt  simple.csv  twitch_edges.csv  wikipedia_edges.csv
graph_sampler/: CMakeLists.txt
graph_sampler/example/: testEdgeSampler.cpp  testExplorationSampler.cpp  testNodeSampler.cpp  utils.cpp  utils.h
graph_sampler/example/input/: graph.1.txt  graph.2.txt
graph_sampler/include/engine/: BaseSampler.h
graph_sampler/include/engine/edge_sampling/: EdgeSampler.h  RandomEdgeSampler.h  RandomNodeEdgeSampler.h
graph_sampler/include/engine/node_sampling/: DegreeBasedSampler.h  NodeSampler.h  PageRankBasedSampler.h  RandomNodeSampler.h
graph_sampler/include/graph/: Graph.h
graph_sampler/src/engine/: BaseSampler.cpp
graph_sampler/src/engine/edge_sampling/: EdgeSampler.cpp  RandomEdgeSampler.cpp  RandomNodeEdgeSampler.cpp
graph_sampler/src/engine/node_sampling/: DegreeBasedSampler.cpp  NodeSampler.cpp  PageRankBasedSampler.cpp  RandomNodeSampler.cpp
graph_sampler/src/graph/: Graph.cpp
include/3_party/armadillo/armadillo_bits/: config.hpp
include/3_party/benchmark/: benchmark.h
include/3_party/openblas/: openblas_config.h
include/analysis/: Backend.h  cluster.h  cncomp.h  degree.h  hotplot.h  linear.h
include/apps/graphanalysis/: analysis.h
include/engine/: BaseSampler.h  value.h
include/engine/edge_sampling/: EdgeSampler.h  HybridNodeEdgeSampler.h  RandomEdgeSampler.h  RandomEdgeSamplerWithInduction.h  RandomEdgeSamplerWithPartialInduction.h  RandomNodeEdgeSampler.h
include/engine/exploration_sampling/: BreadthFirstSearchSampler.h  DepthFirstSearchSampler.h  ForestFireSampler.h  RandomWalkSampler.h  RandomWalkWithJumpSampler.h  RandomWalkWithRestartSampler.h  SnowBallSampler.h
include/engine/graphsampling/: explore.h  randomedge.h  randomnode.h  sample.h
include/engine/node_sampling/: DegreeBasedSampler.h  NodeSampler.h  PageRankBasedSampler.h  RandomNodeSampler.h
include/graph/: DirectedGraph.h  Graph.h  UndirectedGraph.h  kgraph.h
include/utils/: GraphStream.h  LimitedQueue.h  Random.h  hyperloglog.hpp  murmurhash3.h  sampleutils.h  sparsematrix.h  utils.h
lib/3_party/: libarmadillo.so.10  libarmadillo.so.10.8.0  libopenblas.so.0
lib/arma/lib/: libarmadillo.so.10  libarmadillo.so.10.7.1
lib/arma/lib/pkgconfig/: armadillo.pc
lib/arma/share/Armadillo/CMake/: ArmadilloConfig.cmake  ArmadilloConfigVersion.cmake  ArmadilloLibraryDepends-noconfig.cmake  ArmadilloLibraryDepends.cmake
src/analysis/: Backend.cpp  backend.cpp  cluster.cpp  cncomp.cpp  degree.cpp  linear.cpp
src/apps/graphanalysis/: README.md  analysis.cpp  main.cpp
src/engine/: BaseSampler.cpp
src/engine/edge_sampling/: EdgeSampler.cpp  HybridNodeEdgeSampler.cpp  RandomEdgeSampler.cpp  RandomEdgeSamplerWithInduction.cpp  RandomEdgeSamplerWithPartialInduction.cpp  RandomNodeEdgeSampler.cpp
src/engine/exploration_sampling/: BreadthFirstSearchSampler.cpp  DepthFirstSearchSampler.cpp  ForestFireSampler.cpp  RandomWalkSampler.cpp  RandomWalkWithJumpSampler.cpp  RandomWalkWithRestartSampler.cpp  SnowBallSampler.cpp
src/engine/graphsampling/: README.md  explore.cpp  randomedge.cpp  randomnode.cpp  sample.cpp
src/engine/node_sampling/: DegreeBasedSampler.cpp  NodeSampler.cpp  PageRankBasedSampler.cpp  RandomNodeSampler.cpp
src/graph/: DirectedGraph.cpp  Graph.cpp  UndirectedGraph.cpp  kgraph.cpp
src/preprocess/: gen.cpp
src/utils/: GraphStream.cpp  Random.cpp  gen.cpp  sampleutils.cpp  sparsematrix.cpp  utils.cpp
test/: bmBackend.cpp  bmEdgeSample.cpp  bmExploreSample.cpp  bmNodeSample.cpp  bmSample.cpp  bmtest.sh  testAnalysis_cmp.sh  testAnalysis_one.sh
